--- a/_includes/comments-providers/utterances.html
+++ b/_includes/comments-providers/utterances.html
@@ -10,7 +10,7 @@
 
     var script = document.createElement('script');
     script.setAttribute('src', 'https://utteranc.es/client.js');
-    script.setAttribute('repo', 'JS042/JS042.github.io');
+    script.setAttribute('repo', 'JS042/comments');
     script.setAttribute('issue-term', '{{ site.comments.utterances.issue_term | default: "pathname" }}');
     script.setAttribute('theme', '{{ site.comments.utterances.theme | default: "gitihub-light" }}');
     script.setAttribute('crossorigin', 'anonymous');
